<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:ems="10"
            android:hint="@string/h1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/uname_t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/h2"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/address_t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:ems="10"
            android:hint="@string/h3"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/con_t4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/h4"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:text="@string/b1" />

        <Button
            android:id="@+id/show_btn"
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:text="@string/b2" />

        <Button
            android:id="@+id/update_btn"
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:text="@string/b3" />

        <Button
            android:id="@+id/delete_btn"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b4" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>